--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,8 @@ const { title, description } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="description" content={description} />
+		<link rel="preconnect" href="https://rsms.me/" />
+		<link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
 		<title>{title}</title>
 	</head>
 	<body>
@@ -28,10 +30,19 @@ const { title, description } = Astro.props;
 <style>
 	html,
 	body {
-		font-family: 'Liberation Sans', sans-serif;
-		font-weight: 400;
 		margin: 0;
 		width: 100%;
 		height: 100%;
+	}
+	:root {
+		font-family: Inter, sans-serif;
+		font-feature-settings:
+			'liga' 1,
+			'calt' 1; /* fix for Chrome */
+	}
+	@supports (font-variation-settings: normal) {
+		:root {
+			font-family: InterVariable, sans-serif;
+		}
 	}
 </style>
