--- a/src/pages/main_story/[episode]/[...slug].astro
+++ b/src/pages/main_story/[episode]/[...slug].astro
@@ -28,10 +28,12 @@ export async function getStaticPaths() {
 		});
 	}
 
-	console.log(paths);
-
 	return paths;
 }
+
+const { entry } = Astro.props;
+
+console.log(entry);
 ---
 
 <Layout title="Main Story">
