--- a/src/pages/main_story/[episode]/index.astro
+++ b/src/pages/main_story/[episode]/index.astro
@@ -4,23 +4,13 @@ import { MAIN_STORIES } from '@/types/types';
 import { getCollection } from 'astro:content';
 import { mainChapterName } from '@/data/data';
 import { formatToDisplayName } from '@/utils/helper';
-import type { CommonItem } from '@/types/types';
+import type { CommonCollection } from '@/types/types';
 
 export function getStaticPaths() {
 	return MAIN_STORIES.map((ep) => {
 		return { params: { episode: ep } };
 	});
 }
-
-type Stories = {
-	id: string;
-	data: {
-		dataList: CommonItem[];
-	};
-	filePath: string;
-	digest: string;
-	collection: string;
-};
 
 const { episode } = Astro.params;
 
@@ -44,10 +34,12 @@ const displayChapterName = formatToDisplayName(mainChapterName[episode]);
 								groups.get(baseId).push(story);
 								return groups;
 							}, new Map())
-						).map(([baseId, stories]: [string, Stories[]]) => {
+						).map(([baseId, stories]: [string, CommonCollection[]]) => {
 							const currChapter = baseId.slice(4, 5);
 							const currEpisode = baseId.slice(-2);
-							const displayEpisodeName = currChapter + '-' + currEpisode;
+							const formattedEpisode =
+								currEpisode[0] === '0' && currEpisode[1] !== '0' ? currEpisode[1] : currEpisode;
+							const displayEpisodeName = `${currChapter}-${formattedEpisode}`;
 
 							stories.sort((a) => (a.id.slice(-1) === 'a' ? 1 : -1));
 
@@ -56,7 +48,7 @@ const displayChapterName = formatToDisplayName(mainChapterName[episode]);
 									<div class="flex flex-col gap-2">
 										<p>{displayEpisodeName}</p>
 										<div class="flex flex-col gap-1">
-											{stories.map((story: any) => {
+											{stories.map((story: CommonCollection) => {
 												const suffix = story.id.slice(-1) === 'a' ? 'Post-Battle' : 'Pre-Battle';
 												return (
 													<a href={`/main_story/${episode}/${story.id.slice(-3)}`}>{suffix}</a>
